@@ -60,9 +60,9 @@ author = 'The openNDS Contributors'
 # built documents.
 #
 # The short X.Y version.
-version = '10.1.2beta'
+version = '10.1.2'
 # The full version, including alpha/beta/rc tags.
-release = '10.1.2beta'
+release = '10.1.2'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
