@@ -30,7 +30,7 @@
 #ifndef _CONF_H_
 #define _CONF_H_
 
-#define VERSION "10.1.2beta"
+#define VERSION "10.1.2"
 
 /*
  * Defines how many times should we try detecting the interface with the default route (in seconds).
